# sdrangel

./: CHANGELOG  CMakeLists.txt  CMakePresets.json  FIXME-notes.md  gitdiff.sh  json_udp_data_format.readme.md
.github/workflows/: mac.yml
debian/: changelog
devices/plutosdr/: deviceplutosdrscan.cpp
devices/usrp/: deviceusrpparam.cpp
plugins/channelmimo/beamsteeringcwmod/: CMakeLists.txt  beamsteeringcwmodplugin.cpp
plugins/channelmimo/doa2/: CMakeLists.txt  doa2plugin.cpp
plugins/channelmimo/interferometer/: CMakeLists.txt  interferometerplugin.cpp
plugins/channelrx/chanalyzer/: CMakeLists.txt  chanalyzerplugin.cpp
plugins/channelrx/channelpower/: CMakeLists.txt  channelpowerplugin.cpp
plugins/channelrx/demodadsb/: CMakeLists.txt  adsbdemod.cpp  adsbdemod.h  adsbplugin.cpp
plugins/channelrx/demodais/: CMakeLists.txt  aisdemodgui.cpp  aisdemodgui.ui  aisdemodplugin.cpp  aisdemodsettings.h  readme.md
plugins/channelrx/demodam/: CMakeLists.txt  amdemod.cpp  amdemodplugin.cpp
plugins/channelrx/demodapt/: CMakeLists.txt  aptdemodplugin.cpp
plugins/channelrx/demodatv/: CMakeLists.txt  atvdemodplugin.cpp
plugins/channelrx/demodbfm/: CMakeLists.txt  bfmplugin.cpp
plugins/channelrx/demodchirpchat/: CMakeLists.txt  chirpchatdemod.cpp  chirpchatdemod.h  (+1 more)
plugins/feature/: CMakeLists.txt
plugins/feature/freqdisplay/: CMakeLists.txt  freqdisplay.cpp  freqdisplay.h  freqdisplaygui.cpp  freqdisplaygui.h  freqdisplaygui.ui  freqdisplayplugin.cpp  freqdisplayplugin.h  freqdisplaysettings.cpp  freqdisplaysettings.h  freqdisplaywebapiadapter.cpp  freqdisplaywebapiadapter.h  readme.md
sdrbase/settings/: rollupstate.cpp
sdrbase/webapi/: webapirequestmapper.cpp  webapiutils.cpp
sdrgui/channel/: channelgui.cpp
sdrgui/feature/: featuregui.cpp
sdrgui/gui/: rollupcontents.cpp  rollupcontents.h
(+334 files in other folders)
